k8s/frontend/doctor/doctor-frontend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doctor-frontend-depl
  namespace: frontend
spec:
  selector:
    matchLabels:
      app: doctor-frontend-depl
  template:
    metadata:
      labels:
        app: doctor-frontend-depl
    spec:
      containers:
        - name: doctor-frontend-depl
          image: synthiatelemed.azurecr.io/doctor-frontend:6482b1d70657d16c403353edbf1a2badfa8881b9
          resources:
            limits:
              memory: "256Mi"
            requests:
              memory: "64Mi"
              cpu: "20m"
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 5
