k8s/frontend/doctor/doctor-frontend-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: doctor-frontend-srv
  namespace: frontend
spec:
  selector:
    app: doctor-frontend-depl
  ports:
  - port: 3000
    targetPort: 3000
