k8s/frontend/doctor/doctor-frontend-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: doctor-frontend-route
  namespace: frontend
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`doctor.synthia.tech`) 
    kind: Rule
    middlewares:
      - name: default-rate-limit-middleware
        namespace: default
    services:
    - name: doctor-frontend-srv
      namespace: frontend
      kind: Service
      port: 3000
  tls:
    secretName: doctor-frontend-tls
    domains: 
    - main: doctor.synthia.tech
